[package]
name = "antennas-rs"
version = "0.1.0"
authors = ["Quentin Gliech <quentingliech@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
url = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.10", features = ["json"] }
hyper = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
